force-app/main/default/objects/Topup__c/Topup__c.object-meta.xml
<CustomObject>
    <label>Topup</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Topup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>