force-app/main/default/objects/Topup__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Topups</relationshipLabel>
    <relationshipName>Topups</relationshipName>
    <type>Lookup</type>
</CustomField>