force-app/main/default/objects/Topup__c/fields/Considered_For__c.field-meta.xml
<CustomField>
    <fullName>Considered_For__c</fullName>
    <label>Considered For Total Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>