force-app/main/default/objects/Topup__c/fields/DPD__c.field-meta.xml
<CustomField>
    <fullName>DPD__c</fullName>
    <label>DPD</label>
    <length>80</length>
    <type>Text</type>
</CustomField>