force-app/main/default/objects/Topup__c/fields/Existing_loan_A_C_No__c.field-meta.xml
<CustomField>
    <fullName>Existing_loan_A_C_No__c</fullName>
    <label>Existing loan A/C No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>