force-app/main/default/objects/Topup__c/fields/Principal_O_S__c.field-meta.xml
<CustomField>
    <fullName>Principal_O_S__c</fullName>
    <label>Principal O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>